--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500);
 /* line 5, ../sass/style.scss */
 body {
   background: #333;
