--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 @import "compass";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans|Maven+Pro:500);
 //TODO: scss is totally fucked up, needs refactoring
 
 body{
