--- a/haml/index.haml
+++ b/haml/index.haml
@@ -105,8 +105,6 @@
 
     %body
 
-
-
         %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
         
         :javascript
@@ -125,6 +123,8 @@
                         %br
                         by 
                         %a{href:'https://mightyuhu.github.io/'} Benedikt Wolters
+                        %br
+                        %a{href:'https://github.com/mightyuhu/typetrainer'} Source
                 #right
                     #lesson
                     %input#input-lifo{placeholder: "start copying here from above", type: "text"}/
